sysconfig/20000-iptables
# Generated by iptables-save v1.4.21 on Sun Apr  3 17:04:36 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [340:34262]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 24000:24010 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 20000:20001 -j ACCEPT
-A INPUT -s 27.120.101.172 -j ACCEPT
-A INPUT -s 27.120.102.4 -j ACCEPT
-A INPUT -s 113.151.60.93 -j ACCEPT
-A INPUT -s 192.168.0.100 -j ACCEPT
-A INPUT -s 192.168.0.200 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -m physdev --physdev-is-bridged -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Sun Apr  3 17:04:36 2016
